# homework

./: LICENSE  pyproject.toml
src/: bot.py
src/grabber/: items.py  middlewares.py  pipelines.py  settings.py
src/grabber/spiders/: homework.py
